service-platform-toolkit/utils/kube-config/services/monit/prometheus-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-cip
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: default
spec:
  rules:
  - host: prometheus.monit.local.service.platform
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
